Refine log messages.